Fix spinner alignment

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -127,11 +127,11 @@ hr {
 }
 
 .loader-container-top {
-  margin: 3rem 0 4.2rem 4.9rem;
+  margin: 3.8rem 0 4.2rem 8rem;
 }
 
 .loader-container-bottom {
-  margin: 5rem 0 20rem 17.5rem;
+  margin: 5rem 0 20rem 25rem;
 }
 
 .loader {
